--- a/OSDevGrp.OSIntranet.Domain/OSDevGrp.OSIntranet.Domain.csproj
+++ b/OSDevGrp.OSIntranet.Domain/OSDevGrp.OSIntranet.Domain.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{C16F65E1-A789-4BA4-9713-CA84B34ECBD8}</ProjectGuid>
+    <ProjectGuid>{B02149C7-DBE2-42CA-AA67-AF18B3D1D321}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>OSDevGrp.OSIntranet.Repositories</RootNamespace>
-    <AssemblyName>OSDevGrp.OSIntranet.Repositories</AssemblyName>
+    <RootNamespace>OSDevGrp.OSIntranet.Domain</RootNamespace>
+    <AssemblyName>OSDevGrp.OSIntranet.Domain</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>SAK</SccProjectName>
@@ -42,42 +42,18 @@
     <AssemblyOriginatorKeyFile>OSDevGrp.OSIntranet.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AutoMapper">
-      <HintPath>..\External references\AutoMapper.dll</HintPath>
-    </Reference>
     <Reference Include="OSDevGrp.OSIntranet.CommonLibrary.Domain">
       <HintPath>..\External references\OSDevGrp.OSIntranet.CommonLibrary.Domain.dll</HintPath>
     </Reference>
-    <Reference Include="OSDevGrp.OSIntranet.CommonLibrary.Infrastructure.Interfaces">
-      <HintPath>..\External references\OSDevGrp.OSIntranet.CommonLibrary.Infrastructure.Interfaces.dll</HintPath>
-    </Reference>
-    <Reference Include="OSDevGrp.OSIntranet.CommonLibrary.IoC">
-      <HintPath>..\External references\OSDevGrp.OSIntranet.CommonLibrary.IoC.dll</HintPath>
-    </Reference>
-    <Reference Include="OSDevGrp.OSIntranet.CommonLibrary.IoC.Interfaces">
-      <HintPath>..\External references\OSDevGrp.OSIntranet.CommonLibrary.IoC.Interfaces.dll</HintPath>
-    </Reference>
-    <Reference Include="OSDevGrp.OSIntranet.CommonLibrary.Repositories">
-      <HintPath>..\External references\OSDevGrp.OSIntranet.CommonLibrary.Repositories.dll</HintPath>
-    </Reference>
-    <Reference Include="OSDevGrp.OSIntranet.CommonLibrary.Repositories.Interface">
-      <HintPath>..\External references\OSDevGrp.OSIntranet.CommonLibrary.Repositories.Interface.dll</HintPath>
-    </Reference>
-    <Reference Include="OSDevGrp.OSIntranet.CommonLibrary.Wcf">
-      <HintPath>..\External references\OSDevGrp.OSIntranet.CommonLibrary.Wcf.dll</HintPath>
-    </Reference>
-    <Reference Include="OSDevGrp.OSIntranet.DataAccess.Contracts">
-      <HintPath>..\External references\OSDevGrp.OSIntranet.DataAccess.Contracts.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.ServiceModel" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AdresseRepository.cs" />
-    <Compile Include="DomainObjectBuilder.cs" />
-    <Compile Include="FinansstyringRepository.cs" />
-    <Compile Include="KonfigurationRepository.cs" />
+    <Compile Include="Adressekartotek\AdressegruppelisteHelper.cs" />
+    <Compile Include="Adressekartotek\AdresselisteHelper.cs" />
+    <Compile Include="Adressekartotek\BetalingsbetingelselisteHelper.cs" />
+    <Compile Include="DomainObjectListHelper.cs" />
+    <Compile Include="Finansstyring\RegnskabslisteHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -88,23 +64,16 @@
       <Project>{14E268A0-B79F-4EF0-B299-5B2D34BF93AB}</Project>
       <Name>OSDevGrp.OSIntranet.Domain.Interfaces</Name>
     </ProjectReference>
-    <ProjectReference Include="..\OSDevGrp.OSIntranet.Domain\OSDevGrp.OSIntranet.Domain.csproj">
-      <Project>{B02149C7-DBE2-42CA-AA67-AF18B3D1D321}</Project>
-      <Name>OSDevGrp.OSIntranet.Domain</Name>
-    </ProjectReference>
     <ProjectReference Include="..\OSDevGrp.OSIntranet.Infrastructure.Interfaces\OSDevGrp.OSIntranet.Infrastructure.Interfaces.csproj">
       <Project>{E510F652-6E85-402E-9EFF-474841121181}</Project>
       <Name>OSDevGrp.OSIntranet.Infrastructure.Interfaces</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\OSDevGrp.OSIntranet.Repositories.Interfaces\OSDevGrp.OSIntranet.Repositories.Interfaces.csproj">
-      <Project>{4775A5D7-009A-4B8D-A9DE-0CEBDFCC1535}</Project>
-      <Name>OSDevGrp.OSIntranet.Repositories.Interfaces</Name>
     </ProjectReference>
     <ProjectReference Include="..\OSDevGrp.OSIntranet.Resources\OSDevGrp.OSIntranet.Resources.csproj">
       <Project>{EC187CDE-4BB1-4B84-8AAE-1CE461296611}</Project>
       <Name>OSDevGrp.OSIntranet.Resources</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
