--- a/OSDevGrp.OSIntranet.Repositories.Interfaces/OSDevGrp.OSIntranet.Repositories.Interfaces.csproj
+++ b/OSDevGrp.OSIntranet.Repositories.Interfaces/OSDevGrp.OSIntranet.Repositories.Interfaces.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="IAdresseRepository.cs" />
     <Compile Include="IDomainObjectBuilder.cs" />
+    <Compile Include="IFællesRepository.cs" />
     <Compile Include="IKonfigurationRepository.cs" />
     <Compile Include="IFinansstyringRepository.cs" />
     <Compile Include="IRepository.cs" />
