--- a/OSDevGrp.OSIntranet.Tests/App.config
+++ b/OSDevGrp.OSIntranet.Tests/App.config
@@ -80,7 +80,14 @@
                    binding="netNamedPipeBinding"
                 bindingConfiguration="OSDevGrp.OSIntranet.DataAccess.SecureTransactionalNamedPipeBinding"
              contract="OSDevGrp.OSIntranet.DataAccess.Contracts.Services.IFinansstyringRepositoryService"/>
-       </client>
+      <endpoint name="FællesRepositoryService"
+                   address="net.pipe://localhost/OSIntranet/DataAccess/FællesRepositoryService"
+             behaviorConfiguration="OSDevGrp.OSIntranet.DataAccess.EndpointBehavior"
+                   binding="netNamedPipeBinding"
+                bindingConfiguration="OSDevGrp.OSIntranet.DataAccess.SecureTransactionalNamedPipeBinding"
+             contract="OSDevGrp.OSIntranet.DataAccess.Contracts.Services.IFællesRepositoryService"/>
+>
+    </client>
     <behaviors>
       <serviceBehaviors>
         <behavior name="OSDevGrp.OSIntranet.IoCServiceBehavior">
