--- a/OSDevGrp.root/OSIntranet.root/OSDevGrp.OSIntranet/OSDevGrp.OSIntranet.Domain.Interfaces/OSDevGrp.OSIntranet.Domain.Interfaces.csproj
+++ b/OSDevGrp.root/OSIntranet.root/OSDevGrp.OSIntranet/OSDevGrp.OSIntranet.Domain.Interfaces/OSDevGrp.OSIntranet.Domain.Interfaces.csproj
@@ -52,7 +52,10 @@
     <Compile Include="Adressekartotek\IAdressegruppelisteHelper.cs" />
     <Compile Include="Adressekartotek\IAdresselisteHelper.cs" />
     <Compile Include="Adressekartotek\IBetalingsbetingelselisteHelper.cs" />
+    <Compile Include="Finansstyring\IBudgetkontogruppelisteHelper.cs" />
+    <Compile Include="Finansstyring\IKontogruppelisteHelper.cs" />
     <Compile Include="Finansstyring\IRegnskabslisteHelper.cs" />
+    <Compile Include="Fælles\IBrevhovedlisteHelper.cs" />
     <Compile Include="IDomainObjectListHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
