--- a/OSDevGrp.OSIntranet.QueryHandlers/OSDevGrp.OSIntranet.QueryHandlers.csproj
+++ b/OSDevGrp.OSIntranet.QueryHandlers/OSDevGrp.OSIntranet.QueryHandlers.csproj
@@ -82,6 +82,14 @@
       <Project>{776EB809-1060-4037-A993-2B3E74DF779D}</Project>
       <Name>OSDevGrp.OSIntranet.Contracts</Name>
     </ProjectReference>
+    <ProjectReference Include="..\OSDevGrp.OSIntranet.Domain.Interfaces\OSDevGrp.OSIntranet.Domain.Interfaces.csproj">
+      <Project>{14E268A0-B79F-4EF0-B299-5B2D34BF93AB}</Project>
+      <Name>OSDevGrp.OSIntranet.Domain.Interfaces</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\OSDevGrp.OSIntranet.Domain\OSDevGrp.OSIntranet.Domain.csproj">
+      <Project>{B02149C7-DBE2-42CA-AA67-AF18B3D1D321}</Project>
+      <Name>OSDevGrp.OSIntranet.Domain</Name>
+    </ProjectReference>
     <ProjectReference Include="..\OSDevGrp.OSIntranet.Infrastructure.Interfaces\OSDevGrp.OSIntranet.Infrastructure.Interfaces.csproj">
       <Project>{E510F652-6E85-402E-9EFF-474841121181}</Project>
       <Name>OSDevGrp.OSIntranet.Infrastructure.Interfaces</Name>
