--- a/OSDevGrp.root/OSIntranet.root/OSDevGrp.OSIntranet/OSDevGrp.OSIntranet.CommandHandlers/OSDevGrp.OSIntranet.CommandHandlers.csproj
+++ b/OSDevGrp.root/OSIntranet.root/OSDevGrp.OSIntranet/OSDevGrp.OSIntranet.CommandHandlers/OSDevGrp.OSIntranet.CommandHandlers.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BogføringslinjeOpretCommandHandler.cs" />
+    <Compile Include="CommandHandlerBaseExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
