--- a/OSDevGrp.OSIntranet.QueryHandlers/OSDevGrp.OSIntranet.QueryHandlers.csproj
+++ b/OSDevGrp.OSIntranet.QueryHandlers/OSDevGrp.OSIntranet.QueryHandlers.csproj
@@ -71,7 +71,7 @@
     <Compile Include="KreditorGetQueryHandler.cs" />
     <Compile Include="KreditorlisteGetQueryHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QueryHandlerBase.cs" />
+    <Compile Include="Core\QueryHandlerBase.cs" />
     <Compile Include="RegnskabslisteGetQueryHandler.cs" />
   </ItemGroup>
   <ItemGroup>
