--- a/OSDevGrp.OSIntranet.CommandHandlers/OSDevGrp.OSIntranet.CommandHandlers.csproj
+++ b/OSDevGrp.OSIntranet.CommandHandlers/OSDevGrp.OSIntranet.CommandHandlers.csproj
@@ -54,7 +54,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BogføringslinjeOpretCommandHandler.cs" />
+    <Compile Include="Core\AdressekartotekCommandHandlerBase.cs" />
     <Compile Include="Core\CommandHandlerBaseExtensions.cs" />
+    <Compile Include="Core\FinansstyringCommandHandlerBase.cs" />
+    <Compile Include="Core\FællesElementCommandHandlerBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
