--- a/OSDevGrp.root/OSIntranet.root/OSDevGrp.OSIntranet/OSDevGrp.OSIntranet.Domain/OSDevGrp.OSIntranet.Domain.csproj
+++ b/OSDevGrp.root/OSIntranet.root/OSDevGrp.OSIntranet/OSDevGrp.OSIntranet.Domain/OSDevGrp.OSIntranet.Domain.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Adressekartotek\AdressegruppelisteHelper.cs" />
     <Compile Include="Adressekartotek\AdresselisteHelper.cs" />
     <Compile Include="Adressekartotek\BetalingsbetingelselisteHelper.cs" />
+    <Compile Include="Comparers\AdressekontoSaldoComparer.cs" />
     <Compile Include="DomainObjectListHelper.cs" />
     <Compile Include="Finansstyring\BudgetkontogruppelisteHelper.cs" />
     <Compile Include="Finansstyring\KontogruppelisteHelper.cs" />
