--- a/OSDevGrp.OSIntranet.Domain.Interfaces/OSDevGrp.OSIntranet.Domain.Interfaces.csproj
+++ b/OSDevGrp.OSIntranet.Domain.Interfaces/OSDevGrp.OSIntranet.Domain.Interfaces.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Adressekartotek\IAdressegruppelisteHelper.cs" />
     <Compile Include="Adressekartotek\IAdresselisteHelper.cs" />
     <Compile Include="Adressekartotek\IBetalingsbetingelselisteHelper.cs" />
+    <Compile Include="Finansstyring\IBogføringsadvarsel.cs" />
     <Compile Include="Finansstyring\IBudgetkontogruppelisteHelper.cs" />
     <Compile Include="Finansstyring\IKontogruppelisteHelper.cs" />
     <Compile Include="Finansstyring\IRegnskabslisteHelper.cs" />
