--- a/OSDevGrp.OSIntranet.Services/OSDevGrp.OSIntranet.Services.csproj
+++ b/OSDevGrp.OSIntranet.Services/OSDevGrp.OSIntranet.Services.csproj
@@ -80,6 +80,8 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Implementations\AdressekartotekService.cs" />
+    <Compile Include="Implementations\CommonService.cs" />
     <Compile Include="Implementations\FinansstyringService.cs" />
     <Compile Include="Implementations\IntranetServiceBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
