--- a/OSDevGrp.OSIntranet.Services/Web.config
+++ b/OSDevGrp.OSIntranet.Services/Web.config
@@ -40,12 +40,50 @@
       </netNamedPipeBinding>
     </bindings>
     <services>
+      <service name="OSDevGrp.OSIntranet.Services.Implementations.AdressekartotekService"
+               behaviorConfiguration="OSDevGrp.OSIntranet.IoCServiceBehavior">
+        <endpoint address=""
+                  binding="wsHttpBinding"
+                  bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding"
+                  contract="OSDevGrp.OSIntranet.Contracts.Services.IAdressekartotekService">
+          <identity>
+            <dns value="OSDevGrp.OSIntranet.Services"/>
+          </identity>
+        </endpoint>
+        <endpoint address="mex"
+                  binding="wsHttpBinding"
+                  bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding"
+                  contract="IMetadataExchange">
+          <identity>
+            <dns value="OSDevGrp.OSIntranet.Services"/>
+          </identity>
+        </endpoint>
+      </service>
       <service name="OSDevGrp.OSIntranet.Services.Implementations.FinansstyringService" 
                behaviorConfiguration="OSDevGrp.OSIntranet.IoCServiceBehavior">
         <endpoint address=""
                   binding="wsHttpBinding"
                   bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding"
                   contract="OSDevGrp.OSIntranet.Contracts.Services.IFinansstyringService">
+          <identity>
+            <dns value="OSDevGrp.OSIntranet.Services"/>
+          </identity>
+        </endpoint>
+        <endpoint address="mex"
+                  binding="wsHttpBinding"
+                  bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding"
+                  contract="IMetadataExchange">
+          <identity>
+            <dns value="OSDevGrp.OSIntranet.Services"/>
+          </identity>
+        </endpoint>
+      </service>
+      <service name="OSDevGrp.OSIntranet.Services.Implementations.CommonService"
+               behaviorConfiguration="OSDevGrp.OSIntranet.IoCServiceBehavior">
+        <endpoint address=""
+                  binding="wsHttpBinding"
+                  bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding"
+                  contract="OSDevGrp.OSIntranet.Contracts.Services.ICommonService">
           <identity>
             <dns value="OSDevGrp.OSIntranet.Services"/>
           </identity>
