--- a/OSDevGrp.OSIntranet.Tests/App.config
+++ b/OSDevGrp.OSIntranet.Tests/App.config
@@ -38,7 +38,26 @@
         </binding>
       </netNamedPipeBinding>
     </bindings>
-    <services      <service name="OSDevGrp.OSIntranet.Services.Implementations.FinansstyringService"
+    <services      <service name="OSDevGrp.OSIntranet.Services.Implementations.AdressekartotekService"
+               behaviorConfiguration="OSDevGrp.OSIntranet.IoCServiceBehavior">
+        <endpoint address=""
+                  binding="wsHttpBinding"
+                  bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding"
+                  contract="OSDevGrp.OSIntranet.Contracts.Services.IAdressekartotekService">
+>
+          <identity>
+            <dns value="OSDevGrp.OSIntranet.Services"/>
+          </identity>
+        </endpoint        <endpoint address="mex"
+                  binding="wsHttpBinding"
+                  bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding"
+                  contract="IMetadataExchange">
+>
+          <identity>
+            <dns value="OSDevGrp.OSIntranet.Services"/>
+          </identity>
+        </endpoint>
+      </service      <service name="OSDevGrp.OSIntranet.Services.Implementations.FinansstyringService"
                behaviorConfiguration="OSDevGrp.OSIntranet.IoCServiceBehavior">
         <endpoint address=""
                   binding="wsHttpBinding"
@@ -57,7 +76,27 @@
             <dns value="OSDevGrp.OSIntranet.Services"/>
           </identity>
         </endpoint>
-      </service       </services>
+      </service      <service name="OSDevGrp.OSIntranet.Services.Implementations.CommonService"
+               behaviorConfiguration="OSDevGrp.OSIntranet.IoCServiceBehavior">
+        <endpoint address=""
+                  binding="wsHttpBinding"
+                  bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding"
+                  contract="OSDevGrp.OSIntranet.Contracts.Services.ICommonService">
+>
+          <identity>
+            <dns value="OSDevGrp.OSIntranet.Services"/>
+          </identity>
+        </endpoint        <endpoint address="mex"
+                  binding="wsHttpBinding"
+                  bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding"
+                  contract="IMetadataExchange">
+>
+          <identity>
+            <dns value="OSDevGrp.OSIntranet.Services"/>
+          </identity>
+        </endpoint>
+      </service>
+    </services>
     <client      <endpoint name="FinansstyringServiceIntegrationstest"
                 address="http://localhost/osintranetdev/finansstyringservice.svc"
                 behaviorConfiguration="OSDevGrp.OSIntranet.EndpointBehavior"
