--- a/OSDevGrp.OSIntranet.Tests/OSDevGrp.OSIntranet.Tests.csproj
+++ b/OSDevGrp.OSIntranet.Tests/OSDevGrp.OSIntranet.Tests.csproj
@@ -127,13 +127,18 @@
     <Compile Include="Unittests\Contracts\Queries\BudgetkontoplanGetQueryTests.cs" />
     <Compile Include="Unittests\Contracts\Queries\DebitorGetQueryTests.cs" />
     <Compile Include="Unittests\Contracts\Queries\DebitorlisteGetQueryTests.cs" />
+    <Compile Include="Unittests\Contracts\Queries\FirmaGetQueryTests.cs" />
+    <Compile Include="Unittests\Contracts\Queries\FirmalisteGetQueryTests.cs" />
     <Compile Include="Unittests\Contracts\Queries\KontoGetQueryTests.cs" />
     <Compile Include="Unittests\Contracts\Queries\KontogrupperGetQueryTests.cs" />
     <Compile Include="Unittests\Contracts\Queries\KontoplanGetQueryTests.cs" />
     <Compile Include="Unittests\Contracts\Queries\KreditorGetQueryTests.cs" />
     <Compile Include="Unittests\Contracts\Queries\KreditorlisteGetQueryTests.cs" />
+    <Compile Include="Unittests\Contracts\Queries\PersonGetQueryTests.cs" />
+    <Compile Include="Unittests\Contracts\Queries\PersonlisteGetQueryTests.cs" />
     <Compile Include="Unittests\Contracts\Queries\PostnumreGetQueryTests.cs" />
     <Compile Include="Unittests\Contracts\Queries\RegnskabslisteGetQueryTests.cs" />
+    <Compile Include="Unittests\Contracts\Queries\TelefonlisteGetQueryTests.cs" />
     <Compile Include="Unittests\Contracts\Responses\BogføringsadvarselResponseTests.cs" />
     <Compile Include="Unittests\Contracts\Responses\BogføringslinjeOpretResponseTests.cs" />
     <Compile Include="Unittests\Contracts\Views\AdressegruppeViewTests.cs" />
@@ -149,12 +154,14 @@
     <Compile Include="Unittests\Contracts\Views\BudgetoplysningerViewTests.cs" />
     <Compile Include="Unittests\Contracts\Views\DebitorlisteViewTests.cs" />
     <Compile Include="Unittests\Contracts\Views\DebitorViewTests.cs" />
+    <Compile Include="Unittests\Contracts\Views\FirmaViewTests.cs" />
     <Compile Include="Unittests\Contracts\Views\KontogruppeViewTests.cs" />
     <Compile Include="Unittests\Contracts\Views\KontoplanViewTests.cs" />
     <Compile Include="Unittests\Contracts\Views\KontoViewTests.cs" />
     <Compile Include="Unittests\Contracts\Views\KreditoplysningerViewTest.cs" />
     <Compile Include="Unittests\Contracts\Views\KreditorlisteViewTests.cs" />
     <Compile Include="Unittests\Contracts\Views\KreditorViewTests.cs" />
+    <Compile Include="Unittests\Contracts\Views\PersonViewTests.cs" />
     <Compile Include="Unittests\Contracts\Views\PostnummerViewTests.cs" />
     <Compile Include="Unittests\Contracts\Views\RegnskabslisteViewTests.cs" />
     <Compile Include="Unittests\Contracts\Views\TelefonlisteViewTests.cs" />
